--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ multidict==4.7.6
 parse==1.16.0
 pendulum==2.1.2
 pyee==7.0.2
+pyppeteer
 pyquery==1.4.1
 python-dateutil==2.8.1
 pytzdata==2020.1
@@ -39,9 +40,9 @@ soupsieve==2.0.1
 tqdm==4.48.0
 typing-extensions==3.7.4.2
 tzlocal==2.1
-urllib3==1.26.5
+urllib3
 w3lib==1.22.0
-websockets==8.1
+websockets==9.1
 yarl==1.5.0
 importlib-metadata==1.7.0
 jsonpickle==1.4.1
